--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@ https://developers.arcgis.com/documentation/mapping-apis-and-services/get-starte
 
   <script>
     const apiKey = "AAPKccb0e5dd6a284b889e332a34192a6794Ax_dxMugMKgYrpOgp5DqdQGyqohd3QsWsSRdMbbZhItf1t8EB1aI-oKXXlLShiL_";
-    const basemapEnum = "arcgis/streets";
+    const basemapEnum = "arcgis/streets-night";
     const map = new maplibregl.Map({
       container: "map", // the id of the div element
       style: `https://basemapstyles-api.arcgis.com/arcgis/rest/services/styles/v2/styles/${basemapEnum}?token=${apiKey}`,
       zoom: 12, // starting zoom
-      center: [-118.805, 34.027] // starting location [longitude, latitude]
+      center: [-74.0697479, 40.3083382] // starting location [longitude, latitude]
     });
   </script>
 
