--- a/index.html
+++ b/index.html
@@ -1,32 +1,17 @@
-<!--
-
-To run this demo, you need to replace 'YOUR_API_KEY' with an API key from the ArcGIS Developers dashboard.
-
-Sign up for a free account and get an API key.
-
-https://developers.arcgis.com/documentation/mapping-apis-and-services/get-started/
-
--->
-
-<html>
+<html lang="en">
 
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
-  <title>MapLibre GL JS Tutorials: Display a map</title>
-  <style>
-    html,
-    body,
-    #map {
-      padding: 0;
-      margin: 0;
-      height: 100%;
-      width: 100%;
-      font-family: Arial, Helvetica, sans-serif;
-      font-size: 14px;
-      color: #323232;
-    }
-  </style>
+  <meta id="viewport" name="viewport"
+    content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, viewport-fit=cover">
+  <meta property="og:url" content="https://arcgis-maps.neherdata.com" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://www.github.com/neherdata.png" />
+  <link rel="apple-touch-icon" href="https://www.github.com/neherdata.png" />
+  <link rel="stylesheet" href="styles.css">
+
+  <meta property="og:title" content="ArcGIS Embedded Map Exampled" />
+  <title>ArcGIS Embedded Map Example</title>
 
   <script src=https://unpkg.com/maplibre-gl@3.2.1/dist/maplibre-gl.js></script>
   <link href=https://unpkg.com/maplibre-gl@3.2.1/dist/maplibre-gl.css rel="stylesheet" />
@@ -34,19 +19,18 @@ https://developers.arcgis.com/documentation/mapping-apis-and-services/get-starte
 </head>
 
 <body>
+  <h1>AArcGIS Embedded Map Example</h1>
+  <h2>Neher Data Systems</h2>
   <div id="map"></div>
+  <script src="index.js"></script>
+</body>
 
-  <script>
-    const apiKey = "AAPKccb0e5dd6a284b889e332a34192a6794Ax_dxMugMKgYrpOgp5DqdQGyqohd3QsWsSRdMbbZhItf1t8EB1aI-oKXXlLShiL_";
-    const basemapEnum = "arcgis/streets-night";
-    const map = new maplibregl.Map({
-      container: "map", // the id of the div element
-      style: `https://basemapstyles-api.arcgis.com/arcgis/rest/services/styles/v2/styles/${basemapEnum}?token=${apiKey}`,
-      zoom: 12, // starting zoom
-      center: [-74.0697479, 40.3083382] // starting location [longitude, latitude]
-    });
-  </script>
+
+
 
 </body>
+<footer>
+  <p>© 2024 <a href="https://www.esri.com/">ESRI</a> and <a href="https://www.neherdata.com/">Neher Data Systems</a></p>
+</footer>
 
 </html>
