--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-  <h1>AArcGIS Embedded Map Example</h1>
+  <h1>ArcGIS Embedded Map Example</h1>
   <h2>Neher Data Systems</h2>
   <div id="map"></div>
   <script src="index.js"></script>
